# deco

./: .gitignore  CMakeLists.txt  Makefile-legacy  README.txt  cap.c  choice.c  cmd.c  com.c  deco-ru.1  deco.h  dir.c  dir.h  draw.c  edit.c  env.c  env.h  ex.c  help.c  hexview.c  key.c  main.c  menu.c  menu.h  mh.c  pw.c  rec.c  rec.h  run.c  scr.c  scr.h  tty.c  ut.c  view.c
help/: f.general  r.edit  r.general  r.hexview  r.view  u.edit  u.general  u.hexview  u.view
